--- a/index.html
+++ b/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-	</title>
+	<title></title>
+	<link rel="stylesheet"href="navigation.css"/>
 </head>
 <body>
-<p align="center">REGISTRATION PAGE</p>
-<form target="_blank" action="login.html">
-	<p><input placeholder="Enter name" type="text" required/></p>
-	<p><input placeholder="Enter email address" type="password" required/></p>
-	<p><input placeholder="password" type="password" required/></p>
-	<p><input placeholder=" confirm password" type="password" required/></p>
-	<p><input placeholder="Enter mobile number" type="number" required/></p>
-	<p><input type="date"/></p>
-	<p>
-		<input type="radio"  value="male" name="gender"/>Male
-		<input type="radio" value="female" name="gender"/>Female
-	</p>
-	<select>
-		<option value="select a course">select a course</option>
-		<option value="JAVA">JAVA</option>
-		<option value="PHYTHON">PHYTHON</option>
-		<option value="HTML">HTML</option>
-		<option value="DBMS">DBMS</option>
-	</select>
-	<p><input type="file"></p>
-	<p>
-	<button>submit</button>
-	<input type="reset"/>
-	</p>
-</form>
+<nav class="navbar">
+	<a href="register.html">Register</a>
+	<a href="login.html">Login</a>
+	<a href="prabhas blog.html">Biography</a>
+	<a href="photos.html">Photos</a>
+</nav>
 </body>
 </html>
