--- a/login.html
+++ b/login.html
@@ -2,10 +2,17 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet"href="navigation.css"/>
 </head>
 <body>
-	<p align="center">LOGIN PAGE</p>
-<form target="_blank" action="photos.html">
+	<nav class="navbar">
+	<a href="register.html">Register</a>
+	<a href="login.html">Login</a>
+	<a href="prabhas blog.html">Biography</a>
+	<a href="photos.html">Photos</a>
+</nav>
+	<p align="center">prabhasblog</p>
+<form target="_blank" action="prabhas blog.html">
 	<p><input type="password or number" placeholder="Enter emailaddress or phonenumber"/></p>
 	<p><input type="password" placeholder="password"></p>
 	<p><button>login</button>
