--- a/login.html
+++ b/login.html
@@ -3,6 +3,40 @@
 <head>
 	<title></title>
 	<link rel="stylesheet"href="navigation.css"/>
+	<style type="text/css">
+		body{
+			
+			background-image: url(https://cdn3.vectorstock.com/i/1000x1000/16/42/3d-isometric-online-learning-or-distance-courses-vector-23961642.jpg);
+			background-repeat: no-repeat;
+			background-size: 50%;
+		}
+		.login{
+			border-style: solid;
+			margin-left: 50%;
+			width: 30%;
+			padding: 3%;
+			margin-top: 10%;
+			background-color: deeppink;
+			border-radius:5%;
+				text-align: center;
+			
+		}
+			.login input{
+				padding: 3%;
+				font-style: italic;
+				width:60%;
+			}
+			.button{
+				padding: 2%;
+				width: 20%;
+				background-color: blue;
+				color: white;
+
+			}
+			p{
+				color: darkblue;
+			}
+	</style>
 </head>
 <body>
 	<nav class="navbar">
@@ -11,11 +45,13 @@
 	<a href="prabhas blog.html">Biography</a>
 	<a href="photos.html">Photos</a>
 </nav>
-	<p align="center">prabhasblog</p>
+<div class="login">
+	<p>LOGIN PAGE</p>
 <form target="_blank" action="prabhas blog.html">
 	<p><input type="password or number" placeholder="Enter emailaddress or phonenumber"/></p>
 	<p><input type="password" placeholder="password"></p>
-	<p><button>login</button>
+	<p><button class="button">login</button></p>
 </form>
+</div>
 </body>
 </html>
